# leaf_reconstruction

./: README.md  pyproject.toml
.dvc/: config
data/: .gitignore  README.md.dvc  sample_images.dvc
data/CO3D/: .gitignore  102_11953_20498.dvc  102_11956_20712.dvc  102_11959_21062.dvc  102_11970_21361.dvc  102_11971_21363.dvc  102_11975_21793.dvc  102_11977_21817.dvc  102_11979_22020.dvc  109_12963_23645.dvc  109_12969_23662.dvc  160_17579_33020.dvc  160_17602_33228.dvc  160_17619_33484.dvc
data/calibrations/: extrinsics_000.npy  extrinsics_036.npy  extrinsics_072.npy  extrinsics_108.npy  extrinsics_144.npy  extrinsics_180.npy  extrinsics_216.npy  extrinsics_256.npy  extrinsics_288.npy  extrinsics_324.npy  intrinsics.npy
data/neus_training/2017-09-09/image/: 216.png.dvc  288.png.dvc
data/neus_training/2017-09-11/: cameras_sphere.npz.dvc
data/neus_training/2017-09-20/: .gitignore
data/temp/: .gitignore  88-181-Maize01.dvc
dev/data_munging/: create_projection_matrices.py  create_training_data.py  flatten_image_dir.py  get_all_files.py  load_pytorch.py  parse_CO3D.py
dev/image_processing/: segmentation.py  space_carving_example.py
dev/vis/: show_center.py  show_projections.py
leaf_reconstruction/: config.py
leaf_reconstruction/extrinsics/: get_extrinsics.py
leaf_reconstruction/files/: utils.py
leaf_reconstruction/img/: create_neus_mask.py  create_neus_npz.py
leaf_reconstruction/spatial/: space_carving.py
leaf_reconstruction/vis/: vis.py
tests/: test_leaf_reconstruction.py
vis/: .gitignore  co3d_sphere.dvc
(+259 files in other folders)
