[tool.poetry]
name = "leaf_reconstruction"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
dvc = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
