[tool.poetry]
name = "leaf_reconstruction"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dvc = {extras = ["gdrive"], version = "^2.10.0"}
numpy = "^1.22.3"
ubelt = "^1.0.1"
imageio = "^2.16.1"
scikit-image = "^0.19.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
pyvista = "^0.34.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
dvc = "^2.10.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
